# ted-rdf-conversion-pipeline

./: pyproject.toml
.github/workflows/: unit-tests-srv.yml
dags/eforms_notices/: fetch_eform_notices_by_date.py  fetch_eform_notices_by_date_range.py
dags/pipelines/: notice_fetcher_pipelines.py
infra/airflow/: Dockerfile
infra/aws/: airflow-ecs-params.yml  airflow.yml  create-and-deploy-images.sh  create-clusters.sh  metabase-ecs-params.yml  start-services.sh
simple/: extract_metadata.py  fetch_notice.py  rdf_transform.py  read_mapping_suites.py  transform_one.py  transform_one.py.pclprof
ted_sws/alignment_oracle/adapters/: limes_alignment_engine.py
ted_sws/alignment_oracle/services/: generate_alignment_links.py
ted_sws/data_sampler/entrypoints/notebooks/: eform_xml_saxon_indexer.ipynb
ted_sws/data_sampler/services/: notice_xml_indexer.py
ted_sws/master_data_registry/services/: entity_deduplication.py
ted_sws/notice_fetcher/adapters/: ted_api.py
ted_sws/notice_fetcher/services/: notice_fetcher.py
ted_sws/notice_publisher/services/: notice_publisher.py
tests/e2e/notice_fetcher/: test_notice_fetcher.py
tests/e2e/notice_publisher/adapters/: test_notice_publisher.py
tests/e2e/notice_publisher/services/: test_notice_publisher.py
