[tool.poetry]
name = "ted-rdf-conversion-pipeline"
version = "0.1.0"
description = ""
authors = ["Cristian <cristianvasquez@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^8.1.1"
pydantic = ">=1.9.0,<1.10.0"
requests = ">=2.28.2,<2.29.0"
deepdiff = ">=5.7.0,<5.8.0"
jinja2 = ">=3.1.2,<3.2.0"
python-dotenv = ">=0.19.2,<0.20.0"
pymongo = ">=4.0.1,<4.1.0"
hvac = "0.11.2"
sparqlwrapper = "1.8.5"
pandas = "1.5.2"
openpyxl = "3.0.9"
colorama = ">=0.4,<1.0"
fastapi = ">=0.77,<1.0"
python-dateutil = ">=2.8.2,<2.9.0"
rdflib = ">=6.1.1,<6.2.0"
pyshacl = ">=0.19.0,<0.20.0"
agraph-python = "101.0.10"
decorator = ">=5.1.1,<5.2.0"
semantic-version = "2.10.0"
paramiko = ">=3.0.0,<3.1.0"
ordered-set = ">=4.0.2,<4.1.0"
json2html = ">=1.3.0,<1.4.0"
minio = ">=7.1.1,<7.2.0"
certifi = ">=2022.12.7,<2022.13.0"
shortuuid = ">=1.0.11,<1.1.0"
pendulum = ">=2.1.2,<2.2.0"
saxonche = ">=12.4,<13.0"
icecream = "^2.1.3"
line-profiler-pycharm = "^1.1.0"


[tool.poetry.group.dev.dependencies]
coverage = ">=6.3.1,<6.4.0"
pytest-bdd = ">=5.0.0,<5.1.0"
pytest-cov = ">=3.0.0,<3.1.0"
pytest-subtests = ">=0.6.0,<0.7.0"
tox = ">=3.24.5,<3.25.0"
tox-pytest-summary = ">=0.1.2,<0.2.0"
mongomock = "4.1.2"
uvicorn = {version = "0.24.0", extras = ["standard"]}
allure-pytest-bdd = "2.10.0"
pycurl = ">=7.45.2,<7.46.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

